@@ -12,8 +12,8 @@
 # run in foreground (NO | YES/NO)
 #foreground=NO
 
-# log level (INF | INF=0/WAR=1/ERR=2/DBG=3)
-#loglevel=0
+# log level (INF | INF, NOT, WAR, ERR, DBG, EBH, EBS, NET, ALL)
+#loglevel=INF
 
 # specified log file (/var/log/ebusd.log)
 #logfile=/var/log/ebusd.log
@@ -32,6 +32,9 @@
 
 # specified raw file (/tmp/ebusd.bin)
 #rawfile=/tmp/ebusd.bin
+
+# print daemon settings (NO | YES/NO)
+#settings=NO
 
 # max retry getting bus (3 | max: 10)
 #max_retry=3
